fix: ensure content can't overflow the page (#402)
`overflow-wrap` inherits everywhere
some boutique approaches for interactive examples, compat table and footer

--- a/components/compat-table/index-common.css
+++ b/components/compat-table/index-common.css
@@ -48,6 +48,8 @@ table {
 
   margin: 0;
 
+  overflow-x: auto;
+
   border-spacing: 0;
   border-collapse: separate;
 
